k8s/traefik/00-rbac.yaml
# Traefik Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
  labels:
    name: traefik
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik
